testsuite/tests/tool-ocamldep-strict/strict_error.compilers.reference
File "doesnotexist.ml", line 1:
Error: I/O error: doesnotexist.ml: No such file or directory
a.cmo : \
    dep.cmo
a.cmx : \
    dep.cmx
doesnotexist.cmo :
doesnotexist.cmx :
